<resources>
    <string name="app_name">CNiaoSShop</string>

    <string name="tab_home">主页</string>
    <string name="tab_hot">热卖</string>
    <string name="tab_category">分类</string>
    <string name="tab_cart">购物车</string>
    <string name="tab_mine">我的</string>
    <string name="no_have">已经没有了哦!</string>
    <string name="get_data_error">获取数据出错</string>
    <string name="test">测试</string>
    <string name="ware_list">商品列表</string>
    <string name="title_activity_login">登陆</string>

    <string name="my_orders">我的订单</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_info">个人资料</string>
    <string name="my_addresses">收货地址</string>
    <string name="my_msg">我的消息</string>
    <string name="logout">退出登录</string>
    <string name="to_login">点击登录</string>
    <string name="token_error">登录失效，请重新登录</string>
    <string name="smssdk_resend_identify_code">重新获取验证码</string>
    <string name="smssdk_send_mobile_detail"><Data>我们已发送&lt;font color=#209526>验证码&lt;/font>短信到这个号码:</Data></string>

    <string name="create_order">填写订单</string>
    <string name="pay_result">支付结果</string>
    <string name="add_addresses">新建收件地址</string>
</resources>
